--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>mt-naeun-wedding</title>
+
+    <!-- 기본 메타 정보 -->
+    <title>김민태 ♥ 김나은 결혼합니다</title>
+    <meta name="description" content="2026년 10월 25일 일요일 오후 2시, 아벤티움 웨딩 서울에서 김민태와 김나은의 결혼식이 있습니다." />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="김민태 ♥ 김나은 결혼합니다" />
+    <meta property="og:description" content="2026년 10월 25일 일요일 오후 2시, 아벤티움 웨딩 서울" />
+    <meta property="og:image" content="https://pub-aff195e758a643619b9135886dc7b279.r2.dev/my_wedding/wedtmp01.jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://mt-naeun-wedding.pages.dev" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="김민태 ♥ 김나은 결혼합니다" />
+    <meta name="twitter:description" content="2026년 10월 25일 일요일 오후 2시, 아벤티움 웨딩 서울" />
+    <meta name="twitter:image" content="https://pub-aff195e758a643619b9135886dc7b279.r2.dev/my_wedding/wedtmp01.jpeg" />
+
+    <!-- 카카오톡 -->
+    <meta property="og:site_name" content="김민태 ♥ 김나은 결혼식" />
+
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b95f2fa2c4e0cb3f30803e5ce588b3c0"></script>
   </head>
   <body>
