banner hero img 최적화

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <!-- 카카오톡 -->
     <meta property="og:site_name" content="김민태 ♥ 김나은 결혼식" />
 
+    <!-- 메인 히어로 이미지 프리로드 -->
+    <link rel="preload" as="image" href="https://pub-aff195e758a643619b9135886dc7b279.r2.dev/my_wedding/wedtmp01.jpeg" />
+
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=b95f2fa2c4e0cb3f30803e5ce588b3c0"></script>
   </head>
   <body>
